--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-  <div>
-    <div class="canvas" id="box" style="background-color: red;"></div>
+  <div id='app'>
+    <div class="canvas" id="box" :style="canvasStyle">
+      <!-- <h2>{{ cursor }}</h2> -->
+      <div class="inner-canvas">
+        <h1 v-if="cursor < 200" :style="titleStyle" class="title">Yora Kim</h1>
+      </div>
+    </div>
   </div>
 </body>
 
@@ -19,6 +25,7 @@ body {
 
 html, body {
   overflow: hidden;
+  font-family: Georgia,Times,Times New Roman,serif; 
 }
 
 .canvas {
@@ -26,24 +33,70 @@ html, body {
   overflow: hidden;
   transition: all 1s;
 }
+
+.inner-canvas {
+  position: relative;
+  height: 100%;
+}
+
+.title {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  white-space: nowrap;
+  color: white;
+  transition: all 0.5s;
+  transition-timing-function: ease-out;
+}
 </style>
 
 <script>
-let box = document.querySelector('#box')
-console.dir(box)
-let color = ['red', 'green', 'blue']
-let cursor = 1
-window.addEventListener('mousewheel', (e) => {
-  let delta = Math.max(-1, Math.min(1, e.wheelDelta))
-  if (delta == -1) {
-    cursor += 0.4
-  } else {
-    cursor -= 0.4
-    if (cursor < 1) cursor = 1
-  }
-  
-  box.style.backgroundColor = color[Math.floor(cursor/100)]
-  console.log(cursor)
-})
+  const app = new Vue({
+    el: '#app',
+    data: {
+      cursor: 1,
+      canvasStyle: {
+        backgroundColor: '#FBC326'
+      },
+      titleStyle: {
+        "font-size": 10 + 'px',
+        "text-shadow": `${1}px ${1}px #1D7D9E`,
+        'opacity': 1
+      }
+    },
+    mounted() {
+      console.dir(box)
+      let color = ['#FBC326', 'green', 'blue']
+      window.addEventListener('mousewheel', (e) => {
+        let delta = Math.max(-1, Math.min(1, e.wheelDelta))
+        if (delta == -1) {
+          this.cursor += 6
+        } else {
+          this.cursor -= 6
+          if (this.cursor < 1) this.cursor = 1
+        }
+        
+        this.canvasStyle.backgroundColor = color[Math.floor(this.cursor/100)]
+        this.titleAnimate() //calculate title size
+      })
+    },
+    methods: {
+      titleAnimate() {
+        // sizing
+        console.log('calsize', this.cursor <= 50)
+        let size = this.cursor * 10
+
+        this.titleStyle['font-size'] = size + 'px'
+        
+        // opacity
+        this.titleStyle['opacity'] = this.cursor < 100 ? 1: 0
+
+        // shadow
+        this.titleStyle['text-shadow'] = `${size * 0.05}px ${size * 0.05}px #1D7D9E`
+      }
+    }
+  })
 </script>
 </html>
